[package]
name = "haxor"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
description = "memory hacking library"
repository = "https://github.com/elituf/haxor"
keywords = ["memory", "game", "hacking", "process"]

[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
log = "0.4.22"
thiserror = "2.0.9"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
]
