[package]
name = "haxor"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
description = "memory hacking library"
repository = "https://github.com/elituf/haxor"
keywords = ["memory", "game", "hacking", "process"]

[dependencies]
derive_more = { version = "2", features = ["debug", "display"] }
log = "0.4"
thiserror = "2"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
]
